# Aether-Vk

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .gitattributes  .gitignore  BUILD  CMakeLists.txt  MODULE.bazel  README.md  blacklist.sanitizers  vcpkg.json
assets/: starry-night-basis-lz.ktx2
bazel/: windows_cc_utils.bzl  windows_dll_library.bzl
cmake/: AvkDetectPlatform.cmake  FixupBundle.cmake  LinuxMacOs.Clang.toolchain.cmake  Windows.Clang.toolchain.cmake
docs/: AndroidNotes.md  AssemblyNotes.md  BazelQuery.md  CmakeCommands.md  Compile.md  FiberNotes.md  GLTF_Notes.md  Ideas.md  KTX2_Notes.md  NotesArithmetic.md  ReferencesNotes.md  SPIR_V_Notes.md  SignalsAndConsoleHandlers.md  TextureNotes.md  Timing.md  Training.md  VulkanNotes.md  WinUi3-XAML-Islands-on-Win32.md  WindowCommands.md  clang-config-notes.yaml  clock_test  clock_test.c  jump_fcontext-win-x86_64.S
scripts/: Get-WinUI3WinMDFiles.ps1  macos-lipo-vcpkg-produce-universal-libraries.sh  macos-make-self-signed-framework-from-dylib.sh
shaders/: TODO  basic-triangle.frag.spv  basic-triangle.slang  basic-triangle.vert.spv  cube-buffers-no-colors.frag.spv  cube-buffers-no-colors.slang  cube-buffers.frag.spv  cube-buffers.slang  cube-buffers.vert.spv  inline-uniform-block.frag.slang  invert.comp.slang  skybox.frag.spv  skybox.slang  skybox.vert.spv  triangle.frag.slang  triangle.frag.slang.spv  triangle.vert.slang  triangle.vert.slang.spv
src/: CMakeLists.txt
src/core/: CMakeLists.txt  jump_fcontext-win-x86_64.S  main.cpp  make_fcontext-win-x86_64.S
src/core/private/app/: application-manager.cpp  avk-application.cpp
src/core/private/event/: debug.cpp  system.cpp
src/core/private/fiber/: jobs.cpp
src/core/private/mesh/: avk-mesh.cpp
src/core/private/os/: avk-cocoa-helpers.h  avk-cocoa-helpers.mm  avk-core.cpp  avk-log.cpp  filesystem.cpp  stacktrace.cpp
src/core/private/render/: context-vk.cpp  pipeline-vk.cpp  utils-vk.cpp
src/core/private/render/experimental/: avk-basic-buffer-manager.cpp  avk-basic-graphics-info.cpp  avk-basic-image-manager.cpp  avk-descriptor-layout-builder.cpp  avk-ktx2-textures.cpp  avk-staging-transient-manager.cpp
src/core/private/render/vk/: avk-metal-helpers.h  avk-metal-helpers.mm  command-pools.cpp  common-vk.cpp  descriptor-pools.cpp  device-vk.cpp  discard-pool.cpp  framebuffers-vk.cpp  instance-vk.cpp  pipeline-info.cpp  pipeline-pool-vk.cpp  renderpasses-vk.cpp  shader-vk.cpp  surface-vk.cpp  swapchain-vk.cpp
src/core/private/render/vk/buffers/: buffer-vk.cpp
src/core/private/render/vk/images/: image-vk.cpp
src/core/public/app/: application-manager.h  avk-application.h
src/core/public/ecs/: avk-ecs-types.h
src/core/public/event/: constants.h  debug.h  system.h  types.h
src/core/public/fiber/: jobs.h  mpmc.h
src/core/public/mesh/: avk-mesh.h
src/core/public/os/: avk-core-macros.h  avk-log.h  avk-time.h  filesystem.h  stackstrace.h
src/core/public/os/android/: avk-basic-logcat.h
src/core/public/render/: context-vk.h  pipeline-vk.h  utils-vk.h
src/core/public/render/experimental/: avk-basic-buffer-manager.h  avk-basic-graphics-info.h  avk-basic-image-manager.h  avk-descriptor-layout-builder.h  avk-ktx2-textures.h  avk-staging-transient-manager.h
src/core/public/render/testing/: TODO  avk-primitives.h
src/core/public/render/vk/: command-pools.h  common-vk.h  descriptor-pools.h  device-vk.h  discard-pool.h  framebuffers-vk.h  instance-vk.h  pipeline-info.h  pipeline-pool-vk.h  renderpasses-vk.h  shader-vk.h  surface-vk.h  swapchain-vk.h
src/core/public/render/vk/buffers/: buffer-vk.h  vertex-buffer.h
src/core/public/render/vk/images/: image-vk.h
src/core/public/utils/: bits.h  integer.h  mixins.h  types.h
src/launcher/android/app/src/main/cpp/: CMakeLists.txt  avk-android-app.cpp  avk-android-app.h  avk-android-dbg-utils.cpp  avk-android-dbg-utils.h  main.cpp
src/launcher/macos/: CMakeLists.txt  avk-application-delegate.h  avk-application-delegate.mm  avk-macos-application.cpp  avk-macos-application.h  avk-objcxx-utils.h  avk-objcxx-utils.mm  avk-primary-window.h  avk-primary-window.mm  main.mm
src/launcher/windows/: BUILD  CMakeLists.txt  avk-win32-window.cpp  avk-win32-window.h  avk-windows-application.cpp  avk-windows-application.h  main.cpp
src/launcher/windows/AetherVk/: AetherVk.sln  Directory.Build.props
src/launcher/windows/AetherVk/AetherVk.App/: AetherVk.App.csproj  App.xaml  App.xaml.cs  DetailWindow.xaml  DetailWindow.xaml.cs  Helpers.cs  MainWindow.xaml  MainWindow.xaml.cs  MainWindowViewModel.cs  Package.appxmanifest  app.manifest
src/launcher/windows/AetherVk/AetherVk.App/Pages/: EditorPageConsole.xaml  EditorPageConsole.xaml.cs  EditorPageSplashScreen.xaml  EditorPageSplashScreen.xaml.cs  PanelHostPage.xaml  PanelHostPage.xaml.cs  ShellPage.xaml  ShellPage.xaml.cs
src/launcher/windows/AetherVk/AetherVk.App/Properties/: launchSettings.json
src/launcher/windows/AetherVk/AetherVk.App/Resources/: Glyph.xaml  Spacing.xaml
src/launcher/windows/AetherVk/AetherVk.App/UserControls/Shared/: SplitActions.cs
src/launcher/windows/AetherVk/AetherVk.App/UserControls/ShellPage/: SplitContainerControl.xaml  SplitContainerControl.xaml.cs
src/launcher/windows/AetherVk/AetherVk.AvkCore/: AetherVk.AvkCore.vcxproj  AetherVk.AvkCore.vcxproj.filters
src/launcher/windows/AetherVk/AetherVk.Core/: AetherVk.Core.csproj
src/launcher/windows/AetherVk/AetherVk.Core/Interfaces/: Interfaces.cs
src/launcher/windows/AetherVk/AetherVk.Core/Private/: SplittableLayoutTree.cs
src/launcher/windows/AetherVk/AetherVk.Core/Types/: Messages.cs  ObservableDictionary.cs  Types.cs
src/launcher/windows/AetherVk/AetherVk.Core/ViewModels/: PanelHostPageViewModel.cs  ShellPageViewModel.cs  SplitContainerControlViewModel .cs
src/launcher/windows/AetherVk/AetherVk.Runtime/: AetherVk.Runtime.vcxproj
src/launcher/windows/avk-winlib/: CMakeLists.txt
src/launcher/windows/avk-winlib/private/: avk-comutils.cpp
src/launcher/windows/avk-winlib/public/: avk-comutils.h  avk-winlib-macros.h
test/: CMakeLists.txt  README.md
(+21 files in other folders)
