"""Aether Vulkan Module"""
module(name = "aether-vk", version = "0.1.0", compatibility_level = 1)

# Dependencies
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.2.9")

# Local
# Load extension definition
windows_cc = use_extension("//bazel/toolchain:extensions.bzl", "windows_cc")

# Invoke the extension — no parameters if your extension hardcodes everything
windows_cc.exec()

# Import the repo it generated into your module’s repo namespace
use_repo(windows_cc, "cc_windows_x86_64_clang_config")

# C++ toolchain
# this is registered only on windows, hence moved on .bazelrc build:windows
# register_toolchains(
#     "//bazel/toolchain:cc_windows_x86_64_clang_toolchain",
# )